[tool.poetry]
name = "neuralsens"
version = "0.0.4.dev9"
description = "Calculate word counts in a text file."
authors = ["Jaime Pizarroso Gonzalo", "Jose Portela Gonzalez", "Antonio Munoz San Roque"]
license = "GPU-3"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotlib = "^3.5.2"
numpy = "^1.22.4"
pandas = "^1.4.2"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"