[tool.poetry]
name = "neuralsens"
version = "0.0.4.dev11"
description = "Calculate word counts in a text file."
authors = ["Jaime Pizarroso Gonzalo", "Jose Portela Gonzalez", "Antonio Munoz San Roque"]
license = "GPU-3"
readme = "README.md"
homepage = "https://github.com/JaiPizGon/NeuralSens"
repository = "https://github.com/JaiPizGon/NeuralSens/python"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotlib = "^3.5.2"
numpy = "^1.22.4"
pandas = "^1.4.2"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"