[tool.poetry]
name = "neuralsens"
version = "0.0.24"
description = "The neuralsens package facilitates sensitivity analysis on neural network models, quantifying input importance. It provides functions for calculating and plotting input significance, and obtaining neuron layer activation functions and derivatives. Compatible with models created in R and Python, it's a robust toolkit for understanding input contributions in neural networks."
authors = ["Jaime Pizarroso Gonzalo", "Jose Portela Gonzalez", "Antonio Munoz San Roque"]
license = "GPU-3"
readme = "README.md"
homepage = "https://github.com/JaiPizGon/NeuralSens"
repository = "https://github.com/JaiPizGon/NeuralSens/python"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8"
matplotlib = ">=3.5.2"
numpy = ">=1.22.4"
pandas = ">=2.0.0"
scipy = ">=1.8.1"
plotly = ">=5.11.0"
adjustText = "^0.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"